@@ -1,0 +1,20 @@
+Title: ipmi_sensors: new options available
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.4.0i3
+Date: 1480517272
+Class: feature
+
+The special agent ipmi_sensors has now further options:
+<ul>
+<li>Specify IPMI driver.</li>
+<li>Do not output information about cache creation/deletion.</li>
+<li>Automatically recreate the sensor data repository (SDR) cache.</li>
+<li>Attempt to interpret OEM data.</li>
+<li>Output sensor state in output.</li>
+<li>Ignore not-available (i.e. N/A) sensors in output.</li>
+<li>Specify the driver type to use instead of doing an auto selection.</li>
+<li>Output sensor thresholds in output.</li>
+<li>Specify the K_g BMC key to use when authenticating with the remote host for IPMI 2.0.</li>
+</ul>
